Fix margin-bottom to align with tasks-index

--- a/app/assets/stylesheets/task_show.scss
+++ b/app/assets/stylesheets/task_show.scss
@@ -125,7 +125,7 @@
   background-color: #14aaf5;
   border: none;
 
-  margin-bottom: 16px;
+  margin-bottom: 14px;
 
 
     background: #fff;
@@ -154,7 +154,7 @@
       border: 1px solid #b7bfc6;
 
 
-  margin-bottom: 16px;
+  margin-bottom: 14px;
     background-color: #25e8c8;
   border-color: #25e8c8;
   color: white;
